--- a/views/admin/requirements.ejs
+++ b/views/admin/requirements.ejs
@@ -1,5 +1,16 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+<style>
+    .insights {
+            margin-top: 30px;
+        }
+        .insight-title {
+            margin-top: 20px;
+            color: black;
+        }
+        .insight-content {
+            color: gray;
+        }
+</style>
 <body>
 
     <div class="lucent before:content-[''] before:z-[-1] before:h-screen before:w-screen before:bg-lucent before:bg-cover before:top-0 before:fixed after:content-[''] after:z-[-1] after:h-screen after:w-screen after:bg-gradient-to-b after:from-theme-1 after:to-theme-2/50 after:top-0 after:fixed">
@@ -8,7 +19,143 @@
               
                 <div class="content relative transition-[margin,width] duration-100 w-full after:absolute after:inset-0 after:bg-slate-100 after:content-[''] after:xl:rounded-xl after:z-10 content--compact xl:ml-[275px] [&.content--compact]:xl:ml-[91px]">
                     <div class="scrollable-ref z-20 h-full w-full overflow-y-auto px-5 pb-5 pt-[90px] [&_.simplebar-content]:p-0 [&_.simplebar-track.simplebar-vertical]:w-[10px] [&_.simplebar-track.simplebar-vertical]:mr-0.5 [&_.simplebar-track.simplebar-vertical_.simplebar-scrollbar]:before:bg-slate-600/30">
-
+                         <h3 style="color: black;">                                  
+                          Tôi muốn yêu cầu lập một biểu đồ Cohort để theo dõi số lượng người dùng theo tháng kể từ lần mua đầu tiên của họ từ đó suy ra được:  </h3>
+                          <h3 style="color: black;">                                  
+                            => Làm thế nào để giữ chân khách hàng tốt hơn ? </h3>
+                            <h3 style="color: black;">    => Khi nào là thời điểm tốt nhất để tương tác lại với người dùng?</h3>
+                              <h3 style="color: black;">    => khi nào là thời điểm tốt nhất để tiếp thị lại ?</h3>
+                                <h3 style="color: black;">      => cho thấy sự cải thiện về sản phẩm của mình theo thời gian thế nào ?</h3>
+                                <br>
+                                <h3 style="color: black;">  Customer cohort</h3>
+                                <table class="table">
+                                  <thead>
+                                    <tr>
+                                      <th scope="col">Start Month</th>
+                                      <th scope="col">m1</th>
+                                      <th scope="col">m2</th>
+                                      <th scope="col">m3</th>
+                                      <th scope="col">m4</th>
+                                      <th scope="col">m5</th>
+                                      <th scope="col">m6</th>
+                                      <th scope="col">m7</th>
+                                      <th scope="col">m8</th>
+                                      <th scope="col">m9</th>
+                                      <th scope="col">m10</th>
+                                      <th scope="col">m11</th>
+                                      <th scope="col">m12</th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                      <% if(locals.customerCohort) { %>
+                                          <% customerCohort.forEach(object => { %>
+                                              
+                                        
+                                    <tr>
+                                      <th scope="row"><%= object.cohort_month %></th>
+                                      <td><%= object.m1 %></td>
+                                      <td><%= object.m2 %></td>
+                                      <td><%= object.m3 %></td>
+                                      <td><%= object.m4 %></td>
+                                      <td><%= object.m5 %></td>
+                                      <td><%= object.m6 %></td>
+                                      <td><%= object.m7 %></td>
+                                      <td><%= object.m8 %></td>
+                                      <td><%= object.m9 %></td>
+                                      <td><%= object.m10 %></td>
+                                      <td><%= object.m11 %></td>
+                                      <td><%= object.m12 %></td>
+                                    </tr>
+                                 <%  }); } %>
+                                   
+                                  </tbody>
+                                </table>
+                                <h3 style="color: black;">  RETENTION COHORT</h3>
+                                <table class="table">
+                                  <thead>
+                                    <tr>
+                                      <th scope="col">Start Month</th>
+                                      <th scope="col">m1</th>
+                                      <th scope="col">m2</th>
+                                      <th scope="col">m3</th>
+                                      <th scope="col">m4</th>
+                                      <th scope="col">m5</th>
+                                      <th scope="col">m6</th>
+                                      <th scope="col">m7</th>
+                                      <th scope="col">m8</th>
+                                      <th scope="col">m9</th>
+                                      <th scope="col">m10</th>
+                                      <th scope="col">m11</th>
+                                      <th scope="col">m12</th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                      <% if(locals.retentionCohort) { %>
+                                          <% retentionCohort.forEach(object => { %>
+                                              
+                                        
+                                    <tr>
+                                      <th scope="row"><%= object.cohort_month %></th>
+                                      <td><%= object.m1 %></td>
+                                      <td><%= object.m2 %></td>
+                                      <td><%= object.m3 %></td>
+                                      <td><%= object.m4 %></td>
+                                      <td><%= object.m5 %></td>
+                                      <td><%= object.m6 %></td>
+                                      <td><%= object.m7 %></td>
+                                      <td><%= object.m8 %></td>
+                                      <td><%= object.m9 %></td>
+                                      <td><%= object.m10 %></td>
+                                      <td><%= object.m11 %></td>
+                                      <td><%= object.m12 %></td>
+                                    </tr>
+                                 <%  }); } %>
+                                   
+                                  </tbody>
+                                </table>
+                                <h3 style="color: black;">  CHURN COHORT</h3>
+                                <table class="table">
+                                  <thead>
+                                    <tr>
+                                      <th scope="col">Start Month</th>
+                                      <th scope="col">m1</th>
+                                      <th scope="col">m2</th>
+                                      <th scope="col">m3</th>
+                                      <th scope="col">m4</th>
+                                      <th scope="col">m5</th>
+                                      <th scope="col">m6</th>
+                                      <th scope="col">m7</th>
+                                      <th scope="col">m8</th>
+                                      <th scope="col">m9</th>
+                                      <th scope="col">m10</th>
+                                      <th scope="col">m11</th>
+                                      <th scope="col">m12</th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                      <% if(locals.churnCohort) { %>
+                                          <%churnCohort.forEach(object => { %>
+                                              
+                                        
+                                    <tr>
+                                      <th scope="row"><%= object.cohort_month %></th>
+                                      <td><%= object.m1 %></td>
+                                      <td><%= object.m2 %></td>
+                                      <td><%= object.m3 %></td>
+                                      <td><%= object.m4 %></td>
+                                      <td><%= object.m5 %></td>
+                                      <td><%= object.m6 %></td>
+                                      <td><%= object.m7 %></td>
+                                      <td><%= object.m8 %></td>
+                                      <td><%= object.m9 %></td>
+                                      <td><%= object.m10 %></td>
+                                      <td><%= object.m11 %></td>
+                                      <td><%= object.m12 %></td>
+                                    </tr>
+                                 <%  }); } %>
+                                   
+                                  </tbody>
+                                </table>
                                 <h3 style="color: black;">                                  
                                     What day of the week do most users register on? 
                                 </h3> 
@@ -42,12 +189,158 @@
                                 <h3> We want to target our inactive users with an email campaign </h3>
 
                                     <h3> Find the users who have never bought a product</h3>
-                                <hr>
-                             
+                                <hr>                            
                                   <br>
-                                  <h3>User Information</h3>
+                                  <table class="table">
+                                    <thead>
+                                      <tr>
+                                        <th scope="col">id</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Email</th>
+
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                        <% if(locals.inactive_users) { %>
+                                            <% inactive_users.forEach(user => { %>
+                                                
+                                          
+                                      <tr>
+                                        <th scope="row"><%= user.id %></th>
+                                        <td><%= user.name %></td>
+                                        <td><%= user.email %></td>
+                                       
+                                      </tr>
+                                   <%  }); } %>
+                                     
+                                    </tbody>
+                                  </table>
+                                  
+                                  <h3> Our Investors want to know</h3>
+                                    <h3>  what's the average number of products purchased by each user?</h3>
                                   <hr>
+                    
+                                 <br>
+                                 <table class="table">
+                                  <thead>
+                                    <tr>
+                                      <th scope="col">Average products per user</th>
+                                    
+
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                      <% if(locals.inactive_users) { %>
+                                      
+                                              
+                                        
+                                    <tr>
+                                      <th scope="row"><%= avg_products_per_user.avg_products_per_user %></th>
+                                   
+                                     
+                                    </tr>
+                                 <%   } %>
+                                   
+                                  </tbody>
+                                </table>
+                                    <h3>   The top 5 most profitable products of this month</h3>
+                                  <hr>
+                                
+                                 <br>
+                                 <table class="table">
+                                  <thead>
+                                    <tr>
+                                      <th scope="col">id</th>
+                                      <th scope="col">Name</th>
+                                      <th scope="col">Profit</th>
+
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                      <% if(locals.top_5_profits) { %>
+                                          <% top_5_profits.forEach(product => { %>
+                                              
+                                        
+                                    <tr>
+                                      <th scope="row"><%= product.id %></th>
+                                      <td><%= product.name %></td>
+                                      <td><%= product.profit %> $</td>
+                                     
+                                    </tr>
+                                 <%  }); } %>
+                                   
+                                  </tbody>
+                                </table>
+                                <h3>   To calculate the Average Order Value (AOV) and the number of customers each month</h3>
+                                <hr>                    
+                               <br>
+                               <table class="table">
+                                <thead>
+                                  <tr>
+                                    <th scope="col">Month</th>
+                                    <th scope="col">Customer Count</th>
+                                    <th scope="col">Average Order Value (AOV)</th>
+
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                    <% if(locals.monthlyAOV) { %>
+                                        <% monthlyAOV.forEach(month => { %>
+                                            
+                                      
+                                  <tr>
+                                    <th scope="row"><%= month.year_month %></th>
+                                    <td><%= month.total_customers %></td>
+                                    <td><%= month.avg_order_value %> $</td>
+                                   
+                                  </tr>
+                               <%  }); } %>
                                  
+                                </tbody>
+                              </table> 
+                              <br>
+                              <div class="container">
+                                
+                                <div class="insights">
+                                    <h2 class="text-center">Insights</h2>
+                                    <div class="insight-title">
+                                        <h3>1. Biến Động Số Lượng Khách Hàng</h3>
+                                    </div>
+                                    <p class="insight-content">
+                                        Số lượng khách hàng có sự dao động lớn trong suốt năm. Số lượng khách hàng cao nhất là vào tháng 4 năm 2024 với 415 khách hàng. 
+                                        Số lượng khách hàng thấp nhất là vào tháng 5 năm 2023 với chỉ 1 khách hàng, có thể đây là một trường hợp bất thường hoặc lỗi nhập dữ liệu.
+                                    </p>
+                        
+                                    <div class="insight-title">
+                                        <h3>2. Xu Hướng Giá Trị Đơn Hàng Trung Bình (AOV)</h3>
+                                    </div>
+                                    <p class="insight-content">
+                                        AOV thay đổi đáng kể qua các tháng, với một số tháng có giá trị cao hơn hẳn. Tháng 5 năm 2023 có AOV cao nhất là 1406.98, 
+                                        nhưng tháng này chỉ có 1 khách hàng, cho thấy đây có thể là một ngoại lệ. Các giá trị AOV ổn định hơn nằm trong khoảng từ $100 đến $277, 
+                                        với tháng 3 và tháng 4 năm 2024 có sự tăng lên gần $200.
+                                    </p>
+                        
+                                    <div class="insight-title">
+                                        <h3>3. Mối Quan Hệ Giữa Số Lượng Khách Hàng và AOV</h3>
+                                    </div>
+                                    <p class="insight-content">
+                                        Thông thường, những tháng có số lượng khách hàng cao hơn thường có AOV ổn định và thấp hơn. 
+                                        Ví dụ, tháng 6 năm 2023 với 345 khách hàng có AOV là $197.43, trong khi tháng 7 năm 2023 với 215 khách hàng có AOV cao hơn là $277.33. 
+                                        Dữ liệu cho thấy khi nhiều khách hàng mua sắm, AOV có xu hướng giảm, có lẽ do phạm vi kích cỡ đơn hàng rộng hơn.
+                                    </p>
+                        
+                                    <div class="insight-title">
+                                        <h3>4. Xu Hướng Tăng Trưởng và Mùa Vụ</h3>
+                                    </div>
+                                    <p class="insight-content">
+                                        Có sự tăng trưởng đáng kể trong số lượng khách hàng từ nửa cuối năm 2023 đến năm 2024, cho thấy xu hướng theo mùa hoặc các chiến dịch tiếp thị hiệu quả. 
+                                        Những tháng như tháng 12 và tháng 1 có sự giảm nhẹ và phục hồi, có thể do ảnh hưởng của mùa lễ hội.
+                                    </p>
+                                </div>
+                            </div>
+                            <h3>   To find the youngest and oldest customers for each gender</h3>
+                            <hr>                    
+                           <br>
                     </div>
                 </div>
             </div>
